MShades dev images

--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -52,19 +52,6 @@ Figure \ref{systemarchitecture} presents a high level architectural overview of 
 
 %=========================================================================================================
 
-\subsection{Case Study - St Salvator's Chapel}
-Founded in 1450 but internally stripped of its medieval fittings during the Protestant Reformation (1517 - 1648), St Salvator's chapel in St Andrews looks markedly different in the present day than it did upon its completion. An existing VR reconstruction of the chapel as it stood in the period 1450-1460 \& the marked differences between the internal appearance of the VR building \& the current building (including the replacement of the original stone roof with a wooden one \& drastically different dividing of the internal space) make this chapel an ideal candidate within the context of cultural heritage for a mobile XR system to be applied. Figure \ref{sallies_layout} shows the 1450-1460 layout of the chapel (including the paths that the IPS has been prepared upon).
-
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=0.7\textwidth]{sallies_layout.png}
-		\caption{Floor plan of St Salvator's chapel, with IPS routes.}
-		\label{sallies_layout}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
 \subsection{Implementation}
 Figure \ref{experimentalimplementation} presents an overview of the implementation of the Mirrorshades platform design for use in the chapel investigations.
 
@@ -97,6 +84,16 @@ The hardware of the implementation comprises;
 		\label{rift}
 	\end{center}
 \end{figure}
+
+%=========================================================================================================
+
+\section{Modifying the Oculus Rift for Stereoscopic See Through Video}
+
+\TwoFig{rift-clips-cameras/clips.jpg} {clips.jpg} {clips.jpg}
+       {rift-clips-cameras/clips-hori-plate.jpg} {clips-hori-plate.jpg} {clips-hori-plate.jpg}
+
+\TwoFig{rift-clips-cameras/hori-1.jpg} {hori-1.jpg} {hori-1.jpg}
+       {rift-clips-cameras/hori-2.jpg} {hori-2.jpg} {hori-2.jpg}
 
 %=========================================================================================================
 
