--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -75,19 +75,21 @@ Indoor Atlas
 
 \begin{figure}[!htb]
     \centering
-    \begin{minipage}{.33\textwidth}
+    \begin{minipage}{.32\textwidth}
         \centering
         \includegraphics[width=\textwidth]{rift-clips-cameras/clips.jpg}
         \caption{bar}
         \label{bar}
     \end{minipage}%
-    \begin{minipage}{0.33\textwidth}
+    \hspace{.01\textwidth}
+    \begin{minipage}{0.32\textwidth}
         \centering
         \includegraphics[width=\textwidth]{rift-clips-cameras/clips-hori-plate.jpg}
         \caption{foo}
         \label{foo}
-    \end{minipage}
-    \begin{minipage}{0.33\textwidth}
+    \end{minipage}%
+    \hspace{.01\textwidth}
+    \begin{minipage}{0.32\textwidth}
         \centering
         \includegraphics[width=\textwidth]{rift-clips-cameras/hori-1.jpg}
         \caption{baz}
@@ -107,11 +109,45 @@ Indoor Atlas
 \TwoFig{rift-clips-cameras/vert-1.jpg}{vert-1.jpg}{vert-1.jpg}
        {rift-clips-cameras/vert-4.jpg}{vert-4.jpg}{vert-4.jpg}
 
-\TwoFig{rift-clips-cameras/new/thermoplastic.jpg}{thermoplastic.jpg}{thermoplastic.jpg}
+\TwoFig{rift-clips-cameras/thermoplastic.jpg}{thermoplastic.jpg}{thermoplastic.jpg}
        {rift-clips-cameras/vert-7.jpg}{vert-7.jpg}{vert-7.jpg}
 
-\TwoFig{rift-clips-cameras/new/middle.jpg}{middle.jpg}{middle.jpg}
-       {rift-clips-cameras/new/right.jpg}{right.jpg}{right.jpg}
+\TwoFig{rift-clips-cameras/middle.jpg}{middle.jpg}{middle.jpg}
+       {rift-clips-cameras/right.jpg}{right.jpg}{right.jpg}
+
+\TwoFig{latency/vid1.jpg}{vid1.jpg}{vid1.jpg}
+       {latency/vid2.jpg}{vid2.jpg}{vid2.jpg}
+
+\TwoFig{latency/vid3.jpg}{vid3.jpg}{vid3.jpg}
+       {latency/vid4.jpg}{vid4.jpg}{vid4.jpg}
+
+\begin{figure}[h]
+    \begin{center}
+    \begin{minipage}{.32\textwidth}
+        \begin{center}
+        \includegraphics[width=\textwidth]{latency/still1.jpg}
+        \caption{still1.jpg}
+        \label{still1.jpg}
+        \end{center}
+    \end{minipage}%
+    \hspace{.01\textwidth}
+    \begin{minipage}{.32\textwidth}
+		\begin{center}
+        \includegraphics[width=\textwidth]{latency/still2.jpg}
+        \caption{still2.jpg}
+        \label{still2.jpg}
+        \end{center}
+    \end{minipage}%
+    \hspace{.01\textwidth}
+    \begin{minipage}{.32\textwidth}
+        \begin{center}
+        \includegraphics[width=\textwidth]{latency/still3.jpg}
+        \caption{still3.jpg}
+        \label{still3.jpg}
+        \end{center}
+    \end{minipage}
+    \end{center}
+\end{figure}
 
 %=========================================================================================================
 
