--- a/thesis.tex
+++ b/thesis.tex
@@ -62,7 +62,7 @@
   \endminipage\hfill
   \minipage[t]{0.49\textwidth}\centering
   \includegraphics[height=\IHeight]{#4}
-  \caption{#5}\label{#6},
+  \caption{#5}\label{#6}
   \endminipage 
   \end{figure}%
 }
