--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -16,3 +16,5 @@
 %\end{itemize}
 
 %\hrule
+
+Talk about history of alternate realities, talk about the disappointment of VR in the 90's \& it's resurgence now thank to Oculus, etc.
