--- a/thesis.tex
+++ b/thesis.tex
@@ -42,6 +42,9 @@
 %'therefore' symbol
 \usepackage{amssymb}
 
+%euro (currency) symbol
+\usepackage[gen]{eurosym}
+
 \renewcommand{\chaptername}{}
 
 % Renders two images side-by-side & scales them so height is identical
